feat(page): add pageable endpoint with custom mapper